--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.4.0",
     "gulp-uglify": "^1.5.3"
+  },
+  "dependencies": {
+    "owl.carousel": "^2.2.0"
   }
 }
